nullaway_error_4106D5B2-BA4B-4171-9771-661C60AF9888.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerWriteFlushProcessor.java:112: error: [NullAway] dereferenced expression this.state.get() is @Nullable
		this.state.get().onSubscribe(this, subscription);
		                ^
    (see http://t.uber.com/nullaway )
